<resources>
	<string name="app_name">Cafe</string>

	<string name="one">01</string>
	<string name="two">02</string>
	<string name="three">03</string>
	<string name="four">04</string>
	<string name="five">05</string>
	<string name="six">06</string>
	<string name="seven">07</string>
	<string name="eight">08</string>
	<string name="nine">09</string>

	<string name="episode">插嘴</string>
	<string name="theme">主题</string>

	<string name="ensure">确定</string>
	<string name="cancel">取消</string>

	<string name="activity_title_meeting_detail">会议详情</string>

	<string name="test_save_data">保存数据到LRUCache</string>
	<string name="test_show_data">显示LRUCache中的数据</string>
	<string name="test_start_service">启动采集，上传数据服务</string>
	<string name="test_stop_service">停止采集，上传数据服务</string>
	<string name="audio_capture">会议进行中…</string>

	<string name="speak_normal">▪ 正常</string>
	<string name="speak_over_time">▪ 超时</string>
	<string name="speak_theme">发言</string>
	<string name="speak_episode">插嘴</string>
	<string name="speak_duration_m" formatted="false">%d′</string>
	<string name="speak_duration_ms" formatted="false">%d′%d″</string>
	<string name="speak_duration_s" formatted="false">%d″</string>

	<string name="prompt_get_user_info_failure">获取用户信息失败，请重新登录！</string>
	<string name="prompt_login_failure">登录失效或已经在其他地方登录</string>
	<string name="prompt_double_click_exit">再点一次退出应用</string>

	<string name="prompt_meeting_not_start">会议还没有正式开始</string>

	<string name="prompt_talking">正在发言中…</string>
	<string name="prompt_episode">正在插嘴中…</string>
	<string name="prompt_no_speaker">当前没有人说话</string>

	<string name="prompt_not_participated">只有已经加入的会议才能查看详情</string>

	<string name="prompt_dismiss_meeting">您已经退出了会议，不能做解散操作</string>
	<string name="prompt_at_meeting">您正在会议中，不能做退出操作</string>
	<string name="prompt_episode_">您正在插话中，不能开始主题</string>
	<string name="prompt_theme_">您正在主题中，不能插话</string>
	<string name="prompt_query_unstop_event">查询用户事件中…</string>
	<string name="prompt_query_unstop_event_failure">查询用户事件失败</string>
	<string name="prompt_start_theme">开始主题请求中…</string>
	<string name="prompt_start_episode">开始插话请求中…</string>
	<string name="prompt_start_theme_success">开始主题请求成功</string>
	<string name="prompt_start_episode_success">开始插话请求成功</string>
	<string name="prompt_start_theme_failure">开始主题请求失败</string>
	<string name="prompt_start_episode_failure">开始插话请求失败</string>
	<string name="prompt_stop_theme">结束主题请求中…</string>
	<string name="prompt_stop_episode">结束插话请求中…</string>
	<string name="prompt_stop_theme_success">结束主题请求成功</string>
	<string name="prompt_stop_episode_success">结束插话请求成功</string>
	<string name="prompt_stop_theme_failure">结束主题请求失败</string>
	<string name="prompt_stop_episode_failure">结束插话请求失败</string>

	<string name="prompt_query_meeting_detail">正在查询会议信息，请稍后…</string>
	<string name="prompt_query_meeting_detail_failure">查询会议信息失败，请重试！</string>
	<string name="prompt_joining">正在加入会议，请稍后…</string>
	<string name="prompt_scan_qrcode_failure">解析二维码失败，请重试！</string>
	<string name="prompt_no_network">没有网络，请重试</string>
	<string name="prompt_logout_failure">登出失败，请重试</string>
	<string name="prompt_loading_failure">加载失败，请重试</string>
	<string name="prompt_logout_success">用户登出成功</string>
	<string name="prompt_join_failure">加入会议失败，请重试</string>
	<string name="prompt_quit_failure">退出会议失败，请重试</string>
	<string name="prompt_cancel_failure">取消会议预约失败，请重试</string>
	<string name="prompt_dismiss_failure">解散会议失败，请重试</string>
	<string name="prompt_join_success">加入会议成功</string>
	<string name="prompt_quit_success">退出会议成功</string>
	<string name="prompt_cancel_success">取消会议预约成功</string>
	<string name="prompt_dismiss_success">解散会议成功</string>

	<string name="prompt_participant_list_failure">加载会议参与人列表失败，请重试！</string>
	<string name="prompt_present_meeting" formatted="false">您已经加入了’%s’，请退出后重试！</string>
	<string name="prompt_present_meeting_">您已经加入了临时会议，请退出后重试！</string>
	<string name="prompt_present_meeting_failure">查询用户在会状态失败，请重试！</string>
	<string name="prompt_create_brain_storm_failure">创建临时会议请求失败，请重试！</string>
	<string name="prompt_create_brain_storm_success">创建临时会议请求成功</string>
	<string name="prompt_dismiss_brain_storm_failure">解散临时会议请求失败，请重试！</string>
	<string name="prompt_dismiss_brain_storm_success">解散临时会议请求成功</string>

	<string name="dialog_title_logout">用户登出</string>
	<string name="dialog_content_logout">是否登出系统并退到登录界面？</string>
	<string name="dialog_title_join">加入会议</string>
	<string name="dialog_content_join" formatted="false">是否要加入会议 %s？</string>
	<string name="dialog_title_quit">退出会议</string>
	<string name="dialog_content_quit" formatted="false">是否要退出会议 %s？</string>
	<string name="dialog_title_cancel">取消会议</string>
	<string name="dialog_content_cancel" formatted="false">是否要取消会议 %s？</string>
	<string name="dialog_title_dismiss">解散会议</string>
	<string name="dialog_content_dismiss" formatted="false">是否要解散会议 %s？</string>

	<string name="meeting_state_progress_">会议中…</string>
	<string name="meeting_state_not_start">会议还未开始</string>

	<string name="hour_min_second" formatted="false">%s:%s:%s</string>

	<string name="second" formatted="false">%s″</string>


	<string name="user_name">用户名</string>
	<string name="password">密码</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="user_id">工号</string>
	<string name="confirm_password">确认密码</string>


	<string name="dialog_qrcode_title">会议二维码</string>
	<string name="dialog_qrcode_theme">主题：</string>
	<string name="dialog_qrcode_id">ID号：</string>
	<string name="dialog_qrcode_time">时间：</string>
	<string name="dialog_qrcode_location">地点：</string>

	<string name="prompt_meeting_list_empty">您还没有参加过任何会议</string>
	<string name="prompt_shake_phone">找几个同学一起摇一摇手机试试</string>
	<string name="prompt_loading">加载中，请稍后…</string>
	<string name="meeting_state_progress">正在进行中的会议</string>
	<string name="meeting_state_appointment">预约会议</string>
	<string name="meeting_state_history">历史会议</string>

	<string name="op_add">加入会议</string>
	<string name="op_cancel">取消会议</string>
	<string name="op_dismiss">解散会议</string>
	<string name="op_quit">退出会议</string>

	<string name="submit">提交</string>
	<string name="brain_storm">临时会议</string>
	<string name="theme_meeting">主题会议</string>
	<string name="meeting_theme">会议主题</string>
	<string name="meeting_number">会议人数</string>
	<string name="meeting_organizer">会议组织者</string>
	<string name="meeting_place">会议地点</string>
	<string name="success">成功</string>
	<string name="fail">失败</string>
	<string name="result">结果</string>
	<string name="meeting_start_date">会议开始时间</string>
	<string name="meeting_finish_date">会议结束时间</string>
	<string name="meeting_ID">会议ID</string>
	<string name="camera_rationale">Cafe需要使用您的相机，麦克风，SD卡权限</string>
	<string name="rationale_ask_again">获取需要使用您的相机</string>
	<string name="title_settings_dialog">进入设置</string>
	<string name="prompt_open_camera_failure">相机打开失败，请重试</string>
	<string name="photo_prompt_saving_failure">保存照片失败</string>
	<string name="prompt_select_start_date">请先选择会议开始时间</string>
	<string name="prompt_finish_date_wrong">结束时间必须晚于开始时间</string>
	<string name="prompt_start_date_wrong">开始时间必须早于结束时间</string>
	<string name="prompt_date_must_after_now">开始时间和结束时间必须晚于当前时间</string>
	<string name="prompt_need_photo">请先拍照</string>
	<string name="register_fail">注册失败</string>
	<string name="login_fail">登录失败</string>
	<string name="name_password_not_empty">用户名和密码不能为空</string>
	<string name="app_name_big">CAFE</string>
	<string name="name_not_empty">用户名不能为空</string>
	<string name="password_not_empty">密码不能为空</string>
	<string name="id_not_empty">工号不能为空</string>
	<string name="confirm_password_not_empty">确认密码不能为空</string>
	<string name="repassword_wrong">两次密码输入不一致</string>
	<string name="meetingroom_empty">未选择会议室</string>
	<string name="submitting">正在提交…</string>
	<string name="prompt_need_meeting_theme">请输入会议主题</string>
	<string name="prompt_need_meeting_people">请输入会议人数</string>
	<string name="prompt_need_meeting_start">请选择会议时间</string>
	<string name="prompt_need_meeting_finish">请选择会议结束时间</string>
	<string name="prompt_meeting_people_wrong">会议人数输入不正确</string>
	<string name="finding_meeting_rooms">正在查找可用的会议室</string>
	<string name="create_meeting_fail">创建会议失败</string>
	<string name="searching">正在搜索…</string>
	<string name="prompt_need_meeting_id">请输入会议ID</string>
	<string name="prompt_meeting_id_wrong">会议ID输入不正确</string>
	<string name="query_fail">查询失败</string>
	<string name="query_no_meeting">没有查询到相关会议</string>
	<string name="meeting_not_start">会议还未开始</string>
	<string name="search_meeting">搜索会议</string>
</resources>
