<?xml version="1.0" encoding="utf-8"?>
<!--测试页面-->
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#f3f3f3">

	<Button
		android:id="@+id/save_data"
		style="@style/TextNormal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/show_data"
		android:layout_marginBottom="5dp"
		android:text="@string/test_save_data"/>

	<Button
		android:id="@+id/show_data"
		style="@style/TextNormal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/start_service"
		android:layout_marginBottom="5dp"
		android:text="@string/test_show_data"/>

	<Button
		android:id="@+id/start_service"
		style="@style/TextNormal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@+id/stop_service"
		android:text="@string/test_start_service"/>

	<Button
		android:id="@+id/stop_service"
		style="@style/TextNormal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:text="@string/test_stop_service"/>


</RelativeLayout>
